fix: padding and z-index

--- a/frontend/src/base.css
+++ b/frontend/src/base.css
@@ -9,3 +9,7 @@
   --primary-color: rgb(29, 155, 240);
   --light-gray: rgb(83, 100, 113);
 }
+
+.pl16 {
+  padding-left: 16px;
+}
